--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/build/app.css" />
+    <link rel="stylesheet" href="/styles/css/app.css" />
     <title>Tasks API</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css"
     />
-    <script defer src="/ts/build/app.js"></script>
+    <script defer src="build/app.js"></script>
   </head>
   <body>
     <header id="app-header">
